k3s/apps/wordpress/service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
